Need to repair hideButton. Need to rewrite styles.

--- a/MAIN/index.html
+++ b/MAIN/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>User List</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-$END$
+<h1>User List</h1>
+<div id="usersContainer" class="user-container">
+    <!-- Здесь будут отображаться пользователи -->
+</div>
+<button onclick="goBack()">Go Back</button> <!--Кнопка возврата на предыдущую страницу-->
+<script src="script.js"></script>
+<!--В index.html-->
+<!--1 отримати масив об'єктів з endpoint`а https://jsonplaceholder.typicode.com/users-->
+<!--2 Вивести id,name всіх user в index.html. Окремий блок для кожного user.-->
+<!--3 Додати кожному блоку кнопку/посилання , при кліку на яку відбувається перехід  на сторінку user-details.html, котра має детальну інфорацію про об'єкт на який клікнули-->
+
 </body>
 </html>
