--- a/MAIN/post-details.html
+++ b/MAIN/post-details.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Post-Details</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-$END$
+<h1>Post Details</h1>
+<div id="postDetailsContainer">
+    <!-- Здесь будет отображаться подробная информация о посте -->
+</div>
+<div id="commentsContainer">
+    <!-- Здесь будут отображаться комментарии к посту -->
+</div>
+<button onclick="goBack()">Go Back</button> <!--Кнопка возврата на предыдущую страницу-->
+<script src="script.js"></script>
+<!--На странице post-details.html:-->
+<!--7 Вивести всю, без виключення, інформацію про об'єкт post на який клікнули .-->
+<!--8 Нижчє інформаці про пост, вивести всі коментарі поточного поста (ендпоінт  - https://jsonplaceholder.typicode.com/posts/POST_ID/comments)-->
+
 </body>
 </html>
