Need to repair hideButton.

--- a/MAIN/user-details.html
+++ b/MAIN/user-details.html
@@ -11,7 +11,7 @@
 <div id="userDetailsContainer">
     <!-- Здесь будет отображаться подробная информация о пользователе -->
 </div>
-<div id="userPostsContainer">
+<div id="userPostsContainer" class="posts-container">
     <!-- Здесь будет отображаться подробная информация о постах пользователя -->
 </div>
 <!--    <button onclick="showUserPosts()">Show Posts</button> &lt;!&ndash;Кнопка перехода к постам&ndash;&gt;-->
